90% done fishing and animal